; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ieframe/extr_intshcut.c_StartLinkProcessor.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ieframe/extr_intshcut.c_StartLinkProcessor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@StartLinkProcessor.szFormat = internal constant [12 x i8] c" -w -u \22%s\22\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @StartLinkProcessor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @StartLinkProcessor(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @lstrlenW(i8* %7)
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 1
  %11 = add i64 12, %10
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @heap_alloc(i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %1
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %2, align 4
  br label %28

19:                                               ; preds = %1
  %20 = load i32, i32* %5, align 4
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @swprintf(i32 %20, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @StartLinkProcessor.szFormat, i64 0, i64 0), i8* %21)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @run_winemenubuilder(i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @heap_free(i32 %25)
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %19, %17
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @lstrlenW(i8*) #1

declare dso_local i32 @heap_alloc(i32) #1

declare dso_local i32 @swprintf(i32, i8*, i8*) #1

declare dso_local i32 @run_winemenubuilder(i32) #1

declare dso_local i32 @heap_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
